# tensorforge

./: .gitignore  .rsyncignore  .tforge-autocomplete.sh  CONTRIBUTING.md  LICENSE  README.md  bootstrap.py  conftest.py  main.py  pyproject.toml  validate_baselines.py
.github/workflows/: ci.yml
arraysmith/: __init__.py
arraysmith/advanced/: __init__.py
arraysmith/advanced/01_memory_layout/: INSTRUCTION.md  student_code.py
arraysmith/applications/: __init__.py
arraysmith/basic/: __init__.py
arraysmith/basic/01_array_creation/: INSTRUCTION.md  student_code.py
arraysmith/basic/02_properties_reshaping/: INSTRUCTION.md  student_code.py
arraysmith/basic/03_indexing_slicing/: INSTRUCTION.md  student_code.py
forge_core/: README.md  __init__.py  ast_validator.py  benchmark.py  cli_controllers.py  dataset_manager.py  pyproject.toml
forge_core/backends/: __init__.py  base.py  cuda_backend.py  numpy_backend.py
hint/: README.md  pyproject.toml
hint/hint/: __init__.py
hint/hint/arraysmith/: __init__.py
hint/hint/arraysmith/advanced/: __init__.py  hint_01_memory_layout.py
hint/hint/arraysmith/basic/: __init__.py  hint_01_array_creation.py  hint_02_properties_reshaping.py  hint_03_indexing_slicing.py
hint/hint/hpcsmith/basic/: hint_01_cpp_integration.py
hpcsmith/: README.md  __init__.py  conftest.py
hpcsmith/basic/: __init__.py
hpcsmith/basic/01_cpp_integration/: INSTRUCTION.md  student_code.cpp  student_code.py
hpcsmith/native/: 01_cpp_addition.cpp  01_cuda_gemm.cu  __init__.py
tensorsmith/: __init__.py  conftest.py  main.py
tensorsmith/basic/: __init__.py
tests/: __init__.py  conftest.py  test_cuda_backend.py  test_infrastructure.py
tests/arraysmith/advanced/01_memory_layout/: _baseline.py  test_06.py
tests/arraysmith/basic/01_array_creation/: _baseline.py  test_00.py
tests/arraysmith/basic/02_properties_reshaping/: _baseline.py  test_01.py
tests/arraysmith/basic/03_indexing_slicing/: _baseline.py  test_02.py
tests/curriculum/arraysmith/advanced/01_memory_layout/: _baseline.py  test_06.py
tests/curriculum/arraysmith/basic/01_array_creation/: _baseline.py  test_00.py
tests/curriculum/arraysmith/basic/02_properties_reshaping/: _baseline.py  test_01.py
tests/curriculum/arraysmith/basic/03_indexing_slicing/: _baseline.py  test_02.py
tests/curriculum/hpcsmith/: __init__.py  conftest.py
tests/curriculum/hpcsmith/basic/01_cpp_integration/: _baseline.py  test_01.py
tests/curriculum/tensorsmith/: conftest.py
tests/curriculum/tensorsmith/basic/: __init__.py
tests/hpcsmith/basic/: __init__.py
tests/hpcsmith/basic/01_cpp_integration/: test_01.py
tests/infra/: test_bootstrap.py  test_cli_controllers.py  test_cuda_backend.py  test_dataset_manager.py  test_infrastructure.py
