[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "validate_baselines.py", "conftest.py", "arraysmith", "tensorsmith", "hpcsmith", "tests"]

[project]
name = "tensorforge"
version = "0.2.0"
description = "An interactive lab training ground for NumPy (arraysmith) and PyTorch (tensorsmith)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "forge-core",
    "hint",
    "matplotlib>=3.11.0",
    "nguyenpanda>=1.0.0",
    "numpy>=2.5.0",
    "pytest>=9.1.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0", "torchvision>=0.15.0"]
hpc   = ["scikit-build-core", "nanobind", "ninja"]
dev   = [
    "mypy>=1.15.0",
    "pytest>=9.1.1",
    "ruff>=0.9.0",
]

[project.scripts]
tforge = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_ignores = false
exclude = [
    "^arraysmith/.*",
    "^tensorsmith/.*",
    "^hpcsmith/.*",
    "^tests/(arraysmith|tensorsmith|hpcsmith)/.*",
    "^\\.venv/.*",
    "^trash_venv_.*",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "nguyenpanda.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E402", "SIM117", "B017"]

[dependency-groups]
dev = [
    "types-requests>=2.33.0.20260518",
    "types-tqdm>=4.68.0.20260608",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
forge-core = { path = "forge_core", editable = true }
hint = { path = "hint", editable = true }
