[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-core"
version = "0.1.0"
description = "Shared benchmarking and testing infrastructure for TensorForge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["forge_core"]
