[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-core"
version = "0.1.0"
description = "Shared benchmarking and testing infrastructure for TensorForge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pytest>=9.1.1",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[tool.hatch.build.targets.wheel]
packages = ["forge_core"]
